--- a/style/style.css
+++ b/style/style.css
@@ -1,12 +1,14 @@
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "DM Sans", sans-serif;
+    display: flex;
+    justify-content: center;
+    color: #002711;
 }
 
 input[type="text"] {
     padding: 8px;
     border: 0.5px solid #ccc;
     border-radius: 6px;
-    margin: 5px 0;
     width: 20%;
 }
 
@@ -45,4 +47,27 @@ ul {
     background-color: #bdd6d2;
     border-radius: 4px;
     padding: 2% 4%;
+}
+
+footer {
+  margin-top: 40px;
+  padding: 15px;
+  text-align: center;
+  color: #fff;
+  border-radius: 8px;
+}
+
+footer p {
+    color: #002711;;
+}
+
+footer a {
+  color: #28664b; /* amarelo destaque */
+  text-decoration: none;
+  font-weight: bold;
+}
+
+footer a:hover {
+  text-decoration: underline;
+  color: #28664b;
 }
